--- a/operacoes/index.html
+++ b/operacoes/index.html
@@ -21,7 +21,7 @@
 
     <script>
         $(function () {
-            operacoesEventos("Cliente");
+            operacoesEventos("read" ,"Cliente");
         });
     </script>
 </head>
@@ -58,11 +58,11 @@
                         <span class="input-group-text">
                             <h5>Clientes</h5>
                         </span>
-                        <button class="btn btn-info ml-1" type="button" onclick="$('#myModal').modal();">Listar</button>
+                        <button class="btn btn-info ml-1" type="button" onclick="modalOperacoes()">Listar</button>
                         <button class="btn btn-success ml-1" type="button"
-                            onclick="operacoesEventos('Inscricao')">Enviar</button>
-                        <button class="btn btn-warning ml-1" type="button" onclick="">Atualizar</button>
-                        <button class="btn btn-danger ml-1" type="button" onclick="">Excluir</button>
+                            onclick="operacoesEventos('create','Inscricao')">Enviar</button>
+                        <button class="btn btn-warning ml-1" type="button" onclick="operacoesEventos('update','Inscricao')">Atualizar</button>
+                        <button class="btn btn-danger ml-1" type="button" onclick="operacoesEventos('delete','Inscricao')">Excluir</button>
                     </div><br>
 
                     <select class="custom-select" id="inputGroupSelect01" name="cpf" required>
