retorna inscricoes(em produdao)

--- a/index.html
+++ b/index.html
@@ -393,6 +393,7 @@
 
     <!-- Javascript interno -->
     <script src="javascript/summit.js"></script>
+    <script src="javascript/formularios.js"></script>
 
 </body>
 
