--- a/operacoes/index.html
+++ b/operacoes/index.html
@@ -21,7 +21,7 @@
 
     <script>
         $(function () {
-            operacoesEventos("read" ,"Cliente");
+            operacoesEventos('read','Cliente');
         });
     </script>
 </head>
