inscrição/consulta de fornecedores
em andamento, erro ao puxar valores em long (cnpj e telefone)

--- a/index.html
+++ b/index.html
@@ -279,8 +279,8 @@
                 <div class="row">
                     <div class="col colNome">
                         <div class="form-group">
-                            <label for="formFornecedorCPF">CNPJ</label><br>
-                            <input id="formFornecedorCPF" class="form-control" name="cnpj" type="text" minlength="15"
+                            <label for="formFornecedorCNPJ">CNPJ</label><br>
+                            <input id="formFornecedorCNPJ" class="form-control" name="cnpj" type="number" minlength="15"
                                 maxlength="15" disabled="true" required><br>
                         </div>
                     </div>
@@ -288,7 +288,7 @@
                         <div class="form-group">
                             <label for="formFornecedorNovoCNPJ" style="display:none">CNPJ</label><br>
                             <input id="formFornecedorNovoCNPJ" style="display:none" class="form-control" name="novoCnpj"
-                                type="text" minlength="15" maxlength="15" disabled="true"><br>
+                                type="number" minlength="15" maxlength="15" disabled="true"><br>
                         </div>
                     </div>
                     <div class="col">
@@ -312,14 +312,14 @@
                     <div class="col">
                         <div class="form-group">
                             <label for="formFornecedorEmail">E-mail:</label><br>
-                            <input id="formFornecedorEmail" class="form-control" name="email" type="email"
+                            <input id="formFornecedorEmail" class="form-control" name="email" type="text"
                                 disabled="true" required><br>
                         </div>
                     </div>
                     <div class="col">
                         <div class="form-group">
-                            <label for="formFornecedorNumFone">Telefone comercial:</label><br>
-                            <input id="formFornecedorNumFone" class="form-control" name="numFone" type="tel"
+                            <label for="formFornecedorTelefone">Telefone comercial:</label><br>
+                            <input id="formFornecedorTelefone" class="form-control" name="telefone" type="number"
                                 minlength="10" maxlength="11" disabled="true" required><br>
                         </div>
                     </div>
