--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                     <div class="col colNome">
                         <div class="form-group">
                             <label for="formFornecedorCNPJ">CNPJ</label><br>
-                            <input id="formFornecedorCNPJ" class="form-control" name="cnpj" type="number" minlength="15"
+                            <input id="formFornecedorCNPJ" class="form-control" name="cnpj" type="text" minlength="15"
                                 maxlength="15" disabled="true" required><br>
                         </div>
                     </div>
@@ -288,7 +288,7 @@
                         <div class="form-group">
                             <label for="formFornecedorNovoCNPJ" style="display:none">CNPJ</label><br>
                             <input id="formFornecedorNovoCNPJ" style="display:none" class="form-control" name="novoCnpj"
-                                type="number" minlength="15" maxlength="15" disabled="true"><br>
+                                type="text" minlength="15" maxlength="15" disabled="true"><br>
                         </div>
                     </div>
                     <div class="col">
@@ -319,7 +319,7 @@
                     <div class="col">
                         <div class="form-group">
                             <label for="formFornecedorTelefone">Telefone comercial:</label><br>
-                            <input id="formFornecedorTelefone" class="form-control" name="telefone" type="number"
+                            <input id="formFornecedorTelefone" class="form-control" name="telefone" type="text"
                                 minlength="10" maxlength="11" disabled="true" required><br>
                         </div>
                     </div>
