indicadores de desempenho front end

--- a/index.html
+++ b/index.html
@@ -366,7 +366,8 @@
 
         <div class="row my-1">
             <div class="col">
-                <button id="btnIndic" type="button" class="btn btn-idle" onclick="IndicadorService()">Indicadores de desempenho</button>
+                <button id="btnIndic" type="button" class="btn btn-idle"
+                        onclick="window.location.href = 'operacoes/indicadores.html';">Indicadores de desempenho</button>
             </div>
         </div>
     </div>
