--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
     <title>Excursão - SUMMIT Ginásio de Escalada</title>
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+        crossorigin="anonymous">
 
     <!-- Custom fonts for this template -->
     <!-- <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css"> -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet"
-        type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- Custom styles for this template -->
     <link href="css/freelancer.min.css" rel="stylesheet">
@@ -28,8 +27,7 @@
             <div class="col">
                 <button id="btnEvento" type="button" class="btn btn-secondary" onclick="evento()">Eventos</button>
                 <button id="btnCliente" type="button" class="btn btn-secondary" onclick="cliente()">Clientes</button>
-                <button id="btnFornecedor" type="button" class="btn btn-secondary"
-                    onclick="fornecedor()">Fornecedores</button>
+                <button id="btnFornecedor" type="button" class="btn btn-secondary" onclick="fornecedor()">Fornecedores</button>
             </div>
         </div>
 
@@ -42,11 +40,9 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        <input id="formEventoCreate" type="radio" name="funcao" value="create"
-                            onchange="habilitaForm(this.checked, 'create', 'Evento')">
+                        <input id="formEventoCreate" type="radio" name="funcao" value="create" onchange="habilitaForm(this.checked, 'create', 'Evento')">
                         <label for="formEventoCreate">Cadastrar</label>
-                        <input id="formEventoRead" type="radio" name="funcao" value="read"
-                            onchange="habilitaForm(this.checked, 'read', 'Evento')">
+                        <input id="formEventoRead" type="radio" name="funcao" value="read" onchange="habilitaForm(this.checked, 'read', 'Evento')">
                         <label for="formEventoRead">Consultar</label>
                         <!-- <input id="formEventoUpdate" type="radio" name="funcao" value="update"
                             onchange="habilitaForm(this.checked, 'update', 'Evento')">
@@ -57,12 +53,10 @@
                     </div>
                     <div class="col">
                         <button class="btnAcao btn" style="display:none" type="button"></button>
-                        <button class="btnUpdate btn btn-success" style="display:none" type="button" form=""
-                            onclick="executaXML('update','Evento')">Atualizar</button>
-                        <button class="btnDelete btn btn-danger" style="display:none" type="button" form=""
-                            onclick="executaXML('delete','Evento')">Excluir</button>
-                        <button class="btnOperacao btn btn-info" style="display:none" type="button" form=""
-                            onclick="window.location.href = 'operacoes/index.html';">Operações</button>
+                        <button class="btnIndicadores btn btn-info" style="display:none" type="button" form="" onclick="window.location.href = 'operacoes/indicadores.html';">Indicadores</button>
+                        <button class="btnUpdate btn btn-success" style="display:none" type="button" form="" onclick="executaXML('update','Evento')">Atualizar</button>
+                        <button class="btnDelete btn btn-danger" style="display:none" type="button" form="" onclick="executaXML('delete','Evento')">Excluir</button>
+                        <button class="btnOperacao btn btn-info" style="display:none" type="button" form="" onclick="window.location.href = 'operacoes/index.html';">Operações</button>
                     </div>
                 </div><br>
                 <div class="row">
@@ -106,16 +100,16 @@
                     <div class="col">
                         <div class="form-group">
                             <label for="formEventoDataInicio">Data de início</label><br>
-                            <input id="formEventoDataInicio" class="form-control" name="dataInicio"
-                                type="datetime-local" disabled="true" required><br>
+                            <input id="formEventoDataInicio" class="form-control" name="dataInicio" type="datetime-local"
+                                disabled="true" required><br>
                         </div>
                     </div>
 
                     <div class="col">
                         <div class="form-group">
                             <label for="formEventoDataTermino">Data de término</label><br>
-                            <input id="formEventoDataTermino" class="form-control" name="dataTermino"
-                                type="datetime-local" disabled="true" required><br>
+                            <input id="formEventoDataTermino" class="form-control" name="dataTermino" type="datetime-local"
+                                disabled="true" required><br>
                         </div>
                     </div>
                 </div>
@@ -131,16 +125,16 @@
                     <div class="col">
                         <div class="form-group">
                             <label for="formEventoQuorum">Número mínimo de participantes:</label><br>
-                            <input id="formEventoQuorum" class="form-control" name="quorum" type="number"
-                                disabled="true" required min="1"><br>
+                            <input id="formEventoQuorum" class="form-control" name="quorum" type="number" disabled="true"
+                                required min="1"><br>
                         </div>
                     </div>
 
                     <div class="col">
                         <div class="form-group">
                             <label for="formEventoOrcamentoPrevio">Orçamento prévio:</label><br>
-                            <input id="formEventoOrcamentoPrevio" class="form-control" name="orcamentoPrevio"
-                                type="number" disabled="true" required min="1" step="1"><br>
+                            <input id="formEventoOrcamentoPrevio" class="form-control" name="orcamentoPrevio" type="number"
+                                disabled="true" required min="1" step="1"><br>
                         </div>
                     </div>
 
@@ -164,11 +158,9 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        <input id="formClienteCreate" type="radio" name="funcao" value="create"
-                            onchange="habilitaForm(this.checked, 'create', 'Cliente')">
+                        <input id="formClienteCreate" type="radio" name="funcao" value="create" onchange="habilitaForm(this.checked, 'create', 'Cliente')">
                         <label for="formClienteCreate">Cadastrar</label>
-                        <input id="formClienteRead" type="radio" name="funcao" value="read"
-                            onchange="habilitaForm(this.checked, 'read', 'Cliente')">
+                        <input id="formClienteRead" type="radio" name="funcao" value="read" onchange="habilitaForm(this.checked, 'read', 'Cliente')">
                         <label for="formClienteRead">Consultar</label>
                         <!-- <input id="formClienteUpdate" type="radio" name="funcao" value="update"
                             onchange="habilitaForm(this.checked, 'update', 'Cliente')">
@@ -179,10 +171,8 @@
                     </div>
                     <div class="col">
                         <button class="btnAcao btn" style="display:none" type="button"></button>
-                        <button class="btnUpdate btn btn-success" style="display:none" type="button" form=""
-                            onclick="executaXML('update','Cliente')">Atualizar</button>
-                        <button class="btnDelete btn btn-danger" style="display:none" type="button" form=""
-                            onclick="executaXML('delete','Cliente')">Excluir</button>
+                        <button class="btnUpdate btn btn-success" style="display:none" type="button" form="" onclick="executaXML('update','Cliente')">Atualizar</button>
+                        <button class="btnDelete btn btn-danger" style="display:none" type="button" form="" onclick="executaXML('delete','Cliente')">Excluir</button>
                     </div>
                 </div><br>
 
@@ -225,8 +215,8 @@
                     <div class="col">
                         <div class="form-group">
                             <label for="formClienteEndereco">Endereço</label><br>
-                            <input id="formClienteEndereco" class="form-control" name="endereco" type="text"
-                                disabled="true" required><br>
+                            <input id="formClienteEndereco" class="form-control" name="endereco" type="text" disabled="true"
+                                required><br>
                         </div>
                     </div>
                 </div>
@@ -241,15 +231,15 @@
                     <div class="col">
                         <div class="form-group">
                             <label for="formClienteNumFone1">Telefone residencial:</label><br>
-                            <input id="formClienteNumFone1" class="form-control" name="numFone1" type="tel"
-                                minlength="10" maxlength="11" disabled="true" required><br>
+                            <input id="formClienteNumFone1" class="form-control" name="numFone1" type="tel" minlength="10"
+                                maxlength="11" disabled="true" required><br>
                         </div>
                     </div>
                     <div class="col">
                         <div class="form-group">
                             <label for="formClienteNumFone2">Telefone Celular:</label><br>
-                            <input id="formClienteNumFone2" class="form-control" name="numFone2" type="tel"
-                                minlength="10" maxlength="11" disabled="true" required><br>
+                            <input id="formClienteNumFone2" class="form-control" name="numFone2" type="tel" minlength="10"
+                                maxlength="11" disabled="true" required><br>
                         </div>
                     </div>
                 </div>
@@ -265,11 +255,9 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        <input id="formFornecedorCreate" type="radio" name="funcao" value="create"
-                            onchange="habilitaForm(this.checked, 'create', 'Fornecedor')">
+                        <input id="formFornecedorCreate" type="radio" name="funcao" value="create" onchange="habilitaForm(this.checked, 'create', 'Fornecedor')">
                         <label for="formFornecedorCreate">Cadastrar</label>
-                        <input id="formFornecedorRead" type="radio" name="funcao" value="read"
-                            onchange="habilitaForm(this.checked, 'read', 'Fornecedor')">
+                        <input id="formFornecedorRead" type="radio" name="funcao" value="read" onchange="habilitaForm(this.checked, 'read', 'Fornecedor')">
                         <label for="formFornecedorRead">Consultar</label>
                         <!-- <input id="formFornecedorUpdate" type="radio" name="funcao" value="update"
                                 onchange="habilitaForm(this.checked, 'update', 'Fornecedor')">
@@ -280,10 +268,8 @@
                     </div>
                     <div class="col">
                         <button class="btnAcao btn" style="display:none" type="button"></button>
-                        <button class="btnUpdate btn btn-success" style="display:none" type="button" form=""
-                            onclick="executaXML('update','Fornecedor')">Atualizar</button>
-                        <button class="btnDelete btn btn-danger" style="display:none" type="button" form=""
-                            onclick="executaXML('delete','Fornecedor')">Excluir</button>
+                        <button class="btnUpdate btn btn-success" style="display:none" type="button" form="" onclick="executaXML('update','Fornecedor')">Atualizar</button>
+                        <button class="btnDelete btn btn-danger" style="display:none" type="button" form="" onclick="executaXML('delete','Fornecedor')">Excluir</button>
                     </div>
                 </div><br>
 
@@ -323,8 +309,8 @@
                     <div class="col">
                         <div class="form-group">
                             <label for="formFornecedorEmail">E-mail:</label><br>
-                            <input id="formFornecedorEmail" class="form-control" name="email" type="text"
-                                disabled="true" required><br>
+                            <input id="formFornecedorEmail" class="form-control" name="email" type="text" disabled="true"
+                                required><br>
                         </div>
                     </div>
                     <div class="col">
@@ -363,24 +349,14 @@
                 </div>
             </div>
         </div>
-
-        <div class="row my-1">
-            <div class="col">
-                <button id="btnIndic" type="button" class="btn btn-idle"
-                        onclick="window.location.href = 'operacoes/indicadores.html';">Indicadores de desempenho</button>
-            </div>
-        </div>
     </div>
 
     <!-- Javascript do Bootstrap -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 
     <!-- Javascript interno -->
