--- a/operacoes/index.html
+++ b/operacoes/index.html
@@ -1,6 +1,14 @@
+<!-- Pontifícia Universidade Católica de Minas Gerais || Trabalho Interdisciplinar de Software - 2º período
+     Membros:
+     Filipe Iannarelli Caldeira
+     Gabriel Vinicius Ramos da Silva
+     Paulo Angelo Dias Barbosa
+     Wesley Mouraria Pereira
+ -->
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- Cabeçalho com links de templates do Bootstrap utilizados na página -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,7 +28,7 @@
 
 </head>
 
-
+<!-- Criação de um form para editar um evento: seu cronograma, cadastro de clientes e formas de pagamento, e simulação de ingresso -->
 <body>
     <div class="container">
         <div class="row my-3">
@@ -100,7 +108,7 @@
         </form>
     </div>
 
-    <!-- Modal -->
+    <!-- Modal utilizado para exibir uma lista de eventos cadastrados-->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -116,7 +124,6 @@
             </div>
         </div>
     </div>
-
 
     <!-- Javascript do Bootstrap -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
