--- a/operacoes/indicadores.html
+++ b/operacoes/indicadores.html
@@ -1,6 +1,14 @@
+<!-- Pontifícia Universidade Católica de Minas Gerais || Trabalho Interdisciplinar de Software - 2º período
+     Membros:
+     Filipe Iannarelli Caldeira
+     Gabriel Vinicius Ramos da Silva
+     Paulo Angelo Dias Barbosa
+     Wesley Mouraria Pereira
+ -->
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- Cabeçalho com links de templates do Bootstrap utilizados na página -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,7 +28,7 @@
     <script src="../javascript/summit.js"></script>
 </head>
 
-
+<!-- Criação de uma tabela que exibe os indicadores de desempenho de cada evento cadastrado -->
 <body>
     <br>
     <h1 style="text-align:center;">Indicadores de Desempenho</h1>
@@ -59,20 +67,22 @@
                 </table>
             </div>
         </div>
+    </div>
 
-        <!-- Javascript do Bootstrap -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-            crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-            crossorigin="anonymous"></script>
+    <!-- Javascript do Bootstrap -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 
-            <script>
-                $(function () {
-                    tabelaIndicadores();
-                });
-            </script>
+    <script>
+        $(function () {
+            tabelaIndicadores();
+        });
+    </script>
+    
 </body>
 
 </html>
