logo e botões de voltar

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 
 <!-- Criação de um form para cada funcionalidade (Evento, Cliente ou Fornecedor), que é exibido ao escolher a opção -->
 <body>
+    <br><br>
+    <img src="notes/logo/Summit-preto.png" alt="SUMMIT Ginásio de Escalada" style="width:300px;height:100px;">
+
     <div class="container  text-center ">
         <div class="row my-3">
             <div class="col">
