--- a/operacoes/index.html
+++ b/operacoes/index.html
@@ -106,6 +106,8 @@
                 </div>
             </div>
         </form>
+                
+        <button class="btn btn-info ml-1" href="https://pucweb-wesley-mouraria.azurewebsites.net/index.html">Voltar</button>
     </div>
 
     <!-- Modal utilizado para exibir uma lista de eventos cadastrados-->
