--- a/operacoes/indicadores.html
+++ b/operacoes/indicadores.html
@@ -59,6 +59,9 @@
                 </table>
             </div>
         </div>
+            
+        <button class="btn btn-info ml-1" href="https://pucweb-wesley-mouraria.azurewebsites.net/index.html">Voltar</button>
+
     </div>
 
     <!-- Javascript do Bootstrap -->
